--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "-",
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server --content-base src",
-	"build": "NODE_ENV=production ./node_modules/.bin/webpack -p --progress --colors && cp src/index.html build"
+    "build": "NODE_ENV=production ./node_modules/.bin/webpack -p --progress --colors && cp src/index.html build"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "node-sass": "^3.4.2",
@@ -24,6 +25,7 @@
     "font-awesome": "^4.5.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-select": "^1.0.0-beta8",
     "superagent": "^1.7.0"
   }
 }
