some parameters for webpack

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "-",
   "scripts": {
-    "dev": "./node_modules/.bin/webpack-dev-server --content-base src",
-    "build": "NODE_ENV=production ./node_modules/.bin/webpack -p --progress --colors && cp src/index.html build"
+    "dev": "./node_modules/.bin/webpack-dev-server --devtool eval --content-base src",
+    "build": "rm -r build; NODE_ENV=production ./node_modules/.bin/webpack -p --progress --colors && cp -r src/{index.html,data} build"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
