--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "-",
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server --devtool eval --content-base src",
-    "build": "rm -r build; NODE_ENV=production ./node_modules/.bin/webpack -p --progress --colors && cp -r src/{index.html,data} build"
+    "build": "rm -r build; NODE_ENV=production ./node_modules/.bin/webpack -p --progress --colors && cp -r src/data build"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
@@ -16,6 +16,7 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.7.2",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
